--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Tarefas App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/1ec7403a3c.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
