--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <base href="/tarefas-ui">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/1ec7403a3c.js" crossorigin="anonymous"></script>
-<style>@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;body{background:#efefef;}</style><link rel="stylesheet" href="/tarefas-ui/styles.cc37404f1febe7c1a38d.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/tarefas-ui/styles.cc37404f1febe7c1a38d.css"></noscript></head>
+  <!--<style>@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;body{background:#efefef;}</style>-->
+  <link rel="stylesheet" href="/tarefas-ui/styles.cc37404f1febe7c1a38d.css" media="print" onload="this.media='all'"><noscript>
+  <link rel="stylesheet" href="/tarefas-ui/styles.cc37404f1febe7c1a38d.css"></noscript></head>
 <body>
   <app-root></app-root>
 <script src="/tarefas-ui/runtime.0916bf9e6c4402f816ff.js" defer></script><script src="/tarefas-ui/polyfills.dcfcf4163bf9622a4dd6.js" defer></script><script src="/tarefas-ui/main.7aa253ac011960756791.js" defer></script>
