--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
   <app-root></app-root>
 <script src="/tarefas-ui/runtime.0916bf9e6c4402f816ff.js" defer></script><script src="/tarefas-ui/polyfills.dcfcf4163bf9622a4dd6.js" defer></script><script src="/tarefas-ui/main.7aa253ac011960756791.js" defer></script>
-
+  <script src="/tarefas-ui/568.bf6864ef97e4f4d1cc95.js"></script>
 </body></html>
