--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="pt">
+
 <head>
-  <meta charset="utf-8">
-  <title>Tarefas App</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://kit.fontawesome.com/1ec7403a3c.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <title>Tarefas App</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <script src="https://kit.fontawesome.com/1ec7403a3c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
+
 </html>
